# SDL-DearImGUI-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AppTemplate/: CMakeLists.txt  graphics_backend.cmake  main.cpp
AppTemplate/CMake_Bundler/: Apple.cmake  CMakeLists.txt  Linux.cmake  Option.cmake  Windows.cmake
AppTemplate/Submodules/: CMakeLists.txt  imgui.cmake  tinyfd.cmake
AppTemplate/src/: fileDialog.cpp  fileDialog.h  main.cpp  main.h  main.mm
AppTemplate/src/BackendRenderer/: CMakeLists.txt  DirectX11_Renderer.cpp  DirectX11_Renderer.h  Metal_Renderer.h  Metal_Renderer.mm  OpenGL_Renderer.cpp  OpenGL_Renderer.h  Renderer.cpp  Renderer.h  Vulkan_Renderer.h  renderer.cmake
AppTemplate/src/FileManagement/: CMakeLists.txt  fileDialog.h  imguiSettingsManager.cpp  imguiSettingsManager.h
GameTemplate/: CMakeLists.txt  main.cpp  main.h
GameTemplate/CMake_Bundler/: Apple.cmake
GameTemplate/Submodules/: CMakeLists.txt  imgui.cmake
